--- a/povestea noastră.html
+++ b/povestea noastră.html
@@ -36,7 +36,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/logo-80x80.png" alt="Mobirise Website Builder" style="height: 8rem;">
+                        <img src="assets/images/logo-80x80.png" alt="trei persoane lucrează, folosind două laptopuri" style="height: 8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-1" href="index.html">USFR</a></span>
@@ -120,7 +120,7 @@
                 <div class="timeline-text-wrapper">
                     <h4 class="mbr-timeline-title mbr-fonts-style mb-4 display-2"><strong>Formarea USFR</strong></h4>
                     <div class="image-wrapper mb-4">
-                        <img src="assets/images/adult-3715426-1280-1128x752.jpg" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/adult-3715426-1280-1128x752.jpg" alt="patru persoane zâmbestc" title="">
                     </div>
                     <p class="mbr-text mbr-fonts-style display-7">Organizația noastră s-a format la Cluj-Napoca unde câte un student de la fiecare facultate din Cluj-Napoca s-au întâlnit pentru a pune bazele la ce a devenit azi USFR. Scopul întrunirii era cel de conexiune între facultăți. În urma acelui meet, studenții au decis să păsteze conexiunea și să lupte pentru drepurile și misiunea lor, de a ajuta noii studenți<br></p>
                 </div>
@@ -132,7 +132,7 @@
                     <h4 class="mbr-timeline-title mbr-fonts-style mb-4 display-2">
                         <strong>Startul Oficial</strong></h4>
                     <div class="image-wrapper mb-4">
-                        <img src="assets/images/friendship-1229x819.jpg" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/friendship-1229x819.jpg" alt="mai multe persoane formează o stea cu degetele" title="">
                     </div>
                     <p class="mbr-text mbr-fonts-style display-7">Înaine de primul Team Building al grupului, câțiva dintre studenți au fost invitați la primul meet ANOSR unde a participat USFR. 27 Noiembrei este ziua USFR, deoarece acolo am fost recunoscuți pentru prima dată. La acel meet grupul inițial s-a lărgit conectându-ne și de facultăți din alte orașe. Steaua formate din degete a devenit unul dintre simbolurile noastre, simbolizând conexiunea.</p>
                 </div>
@@ -157,7 +157,7 @@
                     <h4 class="mbr-timeline-title mbr-fonts-style mb-4 display-2">
                         <strong>Primul proiect WEBinar</strong></h4>
                     <div class="image-wrapper mb-4">
-                        <img src="assets/images/windows-wjphtjetgzw-unsplash.jpeg" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/windows-wjphtjetgzw-unsplash.jpeg" alt="persoane ce stau în fața unui laptop și zâmbesc" title="">
                     </div>
                     <p class="mbr-text mbr-fonts-style display-7">WEBinar este primul proiect realizat de USFR. Acesta reprezintă platforma prin care USFR are acces în toată țara. WEBinar a funcționat ca o serie de workshopuri și cursuri online de pregătire pentru sesiune și pentru alte activități din cadrul asociației.</p>
                 </div>
@@ -168,7 +168,7 @@
                 <div class="timeline-text-wrapper">
                     <h4 class="mbr-timeline-title mbr-fonts-style mb-4 display-2"><strong>Primul parteneriat mare cu o facultate</strong></h4>
                     <div class="image-wrapper mb-4">
-                        <img src="assets/images/happy-happy-joy-joy.jpg" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/happy-happy-joy-joy.jpg" alt="o fată care zâmbește și ce are o cafea în mână" title="">
                     </div>
                     <p class="mbr-text mbr-fonts-style display-7">
                         Membrii USFR împreună cu Facultatea de Medicină din Cluj-Napoca au creat săptămână medicilor. Program prin care studenții ce fac pregătire pentru admiterea le medicină au posibilitatea să înțeleagă ce presupune gestionarea programului pentru examen. Au fost făcute și exeprimente practice&nbsp; pentru a înțelege conceptele de chimie și biologie făcute în liceu.</p>
@@ -194,7 +194,7 @@
                     <h4 class="mbr-timeline-title mbr-fonts-style mb-4 display-2">
                         <strong>Revenirea USFR</strong></h4>
                     <div class="image-wrapper mb-4">
-                        <img src="assets/images/heads.png" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/heads.png" alt="Ilustrație cu multe capete de oameni" title="">
                     </div>
                     <p class="mbr-text mbr-fonts-style display-7">
                         În urma Pandemiei de Covid USFR s-a desfințat, deoarece membrii acelei generații au terminat anii universitari online. Din cauza restricților contactul USFR cu celelalte asociații și facultăți a căzut. Dar o parte din originalii membrii USFR s-au reunit pentru a repune asociația în picioare</p>
@@ -236,7 +236,7 @@
             </div>
             <div class="p-0 col-12 col-lg-6 md-pb">
                 <div class="image-wrapper">
-                    <img src="assets/images/m-22.jpeg" alt="Mobirise Website Builder">
+                    <img src="assets/images/m-22.jpeg" alt="Bărbat care este tuns scurt și care zâmbește">
                 </div>
             </div>
         </div>
