--- a/Echipa noastră.html
+++ b/Echipa noastră.html
@@ -36,7 +36,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/logo-80x80.png" alt="Mobirise Website Builder" style="height: 8rem;">
+                        <img src="assets/images/logo-80x80.png" alt="logo USFR" style="height: 8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-1" href="index.html">USFR</a></span>
@@ -91,7 +91,7 @@
                         <div class="card-wrap">
                             <div class="item-wrapper position-relative">
                                 <div class="image-wrap">
-                                    <img src="assets/images/w-21.jpeg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
+                                    <img src="assets/images/w-21.jpeg" alt="fată care pozează" data-slide-to="0" data-bs-slide-to="0">
                                 </div>
                             </div>
                             <div class="content-wrap">
@@ -107,7 +107,7 @@
                         <div class="card-wrap">
                             <div class="item-wrapper position-relative">
                                 <div class="image-wrap">
-                                    <img src="assets/images/m-24.jpeg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
+                                    <img src="assets/images/m-24.jpeg" alt="Bărbat cu barbă ce pune mâna la gură și ce poartă tricou negru" data-slide-to="1" data-bs-slide-to="1">
                                 </div>
                             </div>
                             <div class="content-wrap">
@@ -124,7 +124,7 @@
                         <div class="card-wrap">
                             <div class="item-wrapper position-relative">
                                 <div class="image-wrap">
-                                    <img src="assets/images/m-4.jpeg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2">
+                                    <img src="assets/images/m-4.jpeg" alt="Bărbat ce poartă ochelari și ce are barbă care ține brațele încrucișate" data-slide-to="2" data-bs-slide-to="2">
                                 </div>
                             </div>
                             <div class="content-wrap">
@@ -142,7 +142,7 @@
                         <div class="card-wrap">
                             <div class="item-wrapper position-relative">
                                 <div class="image-wrap">
-                                    <img src="assets/images/m-3.jpeg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3">
+                                    <img src="assets/images/m-3.jpeg" alt="Bărbat ce poartă ochelari și ce are părul vâlvoi" data-slide-to="3" data-bs-slide-to="3">
                                 </div>
                             </div>
                             <div class="content-wrap">
@@ -158,7 +158,7 @@
                         <div class="card-wrap">
                             <div class="item-wrapper position-relative">
                                 <div class="image-wrap">
-                                    <img src="assets/images/w-35.jpeg" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="4">
+                                    <img src="assets/images/w-35.jpeg" alt="Fată cu părul până la umeri." data-slide-to="4" data-bs-slide-to="4">
                                 </div>
                             </div>
                             <div class="content-wrap">
@@ -201,7 +201,7 @@
             <div class="item features-image mb-4 col-12 col-md-3">
                 <div class="item-wrapper">
                     <div class="image-wrap">
-                        <img src="assets/images/m-30.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/m-30.jpeg" alt="Bărbat ce poartă ochelari de soare și ce are părul scurt">
                     </div>
                     <div class="content-wrap">
                         <h3 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-2">
@@ -217,7 +217,7 @@
             <div class="item features-image mb-4 col-12 col-md-3">
                 <div class="item-wrapper">
                     <div class="image-wrap">
-                        <img src="assets/images/w-26.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/w-26.jpeg" alt="fată ce zâmbește și ce-și prinde părul în coadă">
                     </div>
                     <div class="content-wrap">
                         <h3 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-2">
@@ -234,7 +234,7 @@
             <div class="item features-image mb-4 col-12 col-md-3">
                 <div class="item-wrapper">
                     <div class="image-wrap">
-                        <img src="assets/images/w-15.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/w-15.jpeg" alt="Fată ce poartă o pălărie deasupra părului">
                     </div>
                     <div class="content-wrap">
                         <h3 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-2">
@@ -262,7 +262,7 @@
             <div class="item features-image mb-4 col-12 col-md-3 active">
                 <div class="item-wrapper">
                     <div class="image-wrap">
-                        <img src="assets/images/happy-happy-joy-joy.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/happy-happy-joy-joy.jpeg" alt="Fată care zâmbește în timp ce ține o cană de cafea">
                     </div>
                     <div class="content-wrap">
                         <h3 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-2">
@@ -279,7 +279,7 @@
             <div class="item features-image mb-4 col-12 col-md-3">
                 <div class="item-wrapper">
                     <div class="image-wrap">
-                        <img src="assets/images/m-14.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2">
+                        <img src="assets/images/m-14.jpg" alt="Bărbat cu părul lung și cu ochii albaștrii" data-slide-to="2" data-bs-slide-to="2">
                     </div>
                     <div class="content-wrap">
                         <h3 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-2">
