--- a/donații.html
+++ b/donații.html
@@ -100,7 +100,7 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="assets/images/cooperation.jpeg" alt="Mobirise Website Builder">
+                    <img src="assets/images/cooperation.jpeg" alt="O piatră ținută în mână pe care scrie cooperative">
                     
                 </div>
             </div>
@@ -128,7 +128,7 @@
         <div class="card-wrapper">
           <div class="row">
             <div class="col-12 col-md-12 col-lg-6 image-wrapper">
-              <img class="w-100" src="assets/images/donate1.jpg" alt="Mobirise Website Builder">
+              <img class="w-100" src="assets/images/donate1.jpg" alt="Ilustrație cu doi copii ce pun bani într-o pușculiță">
             </div>
             <div class="col-12 col-lg col-md-12">
               <div class="text-wrapper align-left">
