--- a/proiecte.html
+++ b/proiecte.html
@@ -36,7 +36,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/logo-80x80.png" alt="Mobirise Website Builder" style="height: 8rem;">
+                        <img src="assets/images/logo-80x80.png" alt="logo USFR" style="height: 8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-1" href="index.html">USFR</a></span>
@@ -101,7 +101,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="image-wrapper">
-                        <img src="assets/images/light-bubble.png" alt="Mobirise Website Builder">
+                        <img src="assets/images/light-bubble.png" alt="Un bec ținut în mână ce strălucește">
                     </div>
                 </div>
                 <div class="col-12 col-lg">
@@ -180,7 +180,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="image-wrapper">
-                        <img src="assets/images/organisation-1.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/organisation-1.jpeg" alt="O tablă pe care sunt scrise rolurile și implementarea unui proiect">
                     </div>
                 </div>
                 <div class="col-12 col-lg">
@@ -258,7 +258,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="image-wrapper">
-                        <img src="assets/images/teamwork-1.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/teamwork-1.jpeg" alt="Patru bucăți mari de puzzle">
                     </div>
                 </div>
                 <div class="col-12 col-lg">
