--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="ro">
 <head>
   <!-- Site made with Mobirise Website Builder v6.1.12, https://mobirise.com -->
@@ -180,7 +180,7 @@
                 <strong>Locația asociației</strong></h3>
             
         </div>
-        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d174851.57885639006!2d23.451698573557895!3d46.78350247566265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47490c1f916c0b8b%3A0xbbc601c331f148b!2sCluj-Napoca%2C%20Romania!5e0!3m2!1sen!2sus!4v1768668094601!5m2!1sen!2sus" allowfullscreen=""></iframe></div>
+        <div class="google-map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d174851.57885639006!2d23.451698573557895!3d46.78350247566265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47490c1f916c0b8b%3A0xbbc601c331f148b!2sCluj-Napoca%2C%20Romania!5e0!3m2!1sen!2sus!4v1768668094601!5m2!1sen!2sus" allowfullscreen=""></iframe></div>
     </div>
 </section>
 
@@ -275,11 +275,16 @@
                     <li class="mbr-text item-wrap"><a href="mailto:suport@USFR.com?subject=support%40USFR.com" class="text-success">Mail: support@USFR.com</a></li><li class="mbr-text item-wrap"><a href="Contact.html" class="text-success">Telefon: +0768 9102 3421</a></li>
                 </ul>
             </div>
-            
         </div>
     </div>
 </section>
-  <div><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/4433281" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section></div><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+<section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/4433281" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section>
+  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  
+  <script src="assets/smoothscroll/smooth-scroll.js"></script> 
+  <script src="assets/ytplayer/index.js"></script>  
+  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  
+  <script src="assets/theme/js/script.js"></script>  
+  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
