--- a/proiecte.html
+++ b/proiecte.html
@@ -281,7 +281,7 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
-                <h2 class="mbr-section-title align-center mbr-fonts-style display-2"><strong>What you get</strong></h2>
+                <h2 class="mbr-section-title align-center mbr-fonts-style display-2">Ce obți ?</h2>
             </div>
         </div>
         <div class="row">
