--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                     
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card mb-3">
-                            <div class="card-header" role="tab" id="headingOne">
+                            <div class="card-header" id="headingOne">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_8" aria-expanded="false">
                                     <h3 class="panel-title-edit mbr-fonts-style mb-0 display-4"><strong>Când s-a format USFR ?</strong></h3>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
@@ -532,7 +532,7 @@
                             </div>
                         </div>
                         <div class="card mb-3">
-                            <div class="card-header" role="tab" id="headingTwo">
+                            <div class="card-header" id="headingTwo">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_8" aria-expanded="false">
                                     <h3 class="panel-title-edit mbr-fonts-style mb-0 display-4"><strong>Cum pot să fiu voluntar ?</strong></h3>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
@@ -546,8 +546,8 @@
                             </div>
                         </div>
                         <div class="card mb-3">
-                            <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_8" aria-expanded="false" aria-controls="collapse3">
+                            <div class="card-header" id="headingThree">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_8" aria-expanded="false">
                                     <h3 class="panel-title-edit mbr-fonts-style mb-0 display-4"><strong>Cum pot susține USFR ?</strong></h3>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
